--- a/cloud-fs/pom.xml
+++ b/cloud-fs/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
     <dependency>
       <groupId>io.activej</groupId>
+      <artifactId>activej-http</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.activej</groupId>
       <artifactId>activej-csp</artifactId>
       <version>${project.version}</version>
     </dependency>
